Add fight support and spell fixes

--- a/Assets/Resources/Translations/english.txt
+++ b/Assets/Resources/Translations/english.txt
@@ -252,6 +252,8 @@ green=green
 grey=grey
 heal=heal
 healDesc=heal the unit. The cure rate is based on the available AP.
+healComplete=Heal complete
+healHp=Heal {0} HP
 help=help
 hill=hill
 hillDirt=dirt hill
@@ -299,7 +301,7 @@ kingdom=kingdom
 lampDesc=Allow you to see more
 language=language
 languageHelp=help with the translation
-languageInfo=So far only a part has been translated.
+languageInfo=This language is the default and failback language.
 languageSelect=select your language
 languageSystem=system language
 lastbuild=last builds
@@ -330,6 +332,7 @@ mageskillDesc=mage get a % attack bonus over skill.
 magewarrior=mage > warrior
 magewarriorDesc=mage get a % attack bonus over warrior.
 magic=perform magic
+magicDesc=perform magic
 magicSelect=selection
 mainmenu=Main menu
 map=map
@@ -398,7 +401,7 @@ notifications=notifications
 nursery=nursery
 occupy=occupy the town
 occupyMoved=Your unit moved. You can not occupy the town.
-occupyTransferEnemy=You have taken the {0} of {1}.
+occupyTransferEnemy=You have taken the {0} of {1}. Please wait a round to get full control.
 occupyTransferOwner=Your {0} has been taken over by {1}.
 ocean=ocean
 olive=olive
@@ -643,3 +646,28 @@ worker=worker
 yellow=yellow
 zoomCameraIn=Zoom in
 zoomCameraOut=Zoom out
+loadingSys=Loading {0}
+loadingSysSub=Reading {0}/{1}
+golem=golem
+createGolem=Creates a golem
+createUnit=Create a new unit
+createBuilding=Create a new building
+createDetail=Create {0}
+createBelong=Creates a {0}, which belongs then to {1}.
+produceDepositEmpty=The deposit of {0} is empty.
+produceDepositNearlyEmpty=The deposit of {0} is nearly empty.
+produceTurn=Produce resources every turn
+produceConstruction=Produce resources after construction
+reqResearch=Need the research {0}.
+actionInteraction={0} is ready to perform {1}.
+actionPerform={0} performs {1}. {2}
+reqHere={0}. Here is {1}.
+reqEmpty=Needs an empty field with no {0}
+reqNotEmpty=Needs a field with {0}
+presentNone={0} has not found a suitable gift for {1}.
+presentSuccessful={0} has successfully given {1} a present and received a thank you.
+presentOwn=Thinking only of yourself is not in the spirit of giving. It's better to give presents to others.
+present=give a present
+presentDesc=Give something as a present
+elementFreeUnit=Free unit on development
+christkind=christ child
