--- a/Assets/Resources/Translations/english.txt
+++ b/Assets/Resources/Translations/english.txt
@@ -391,7 +391,7 @@ neutralbadDesc=Unit with the ethos neutral get a % attack malus on units from th
 neutralgood=neutral > good
 neutralgoodDesc=Unit with the ethos neutral get a % attack bonus on units from the ethos good.
 new=Whats new?
-newDesc=Hello;;this update brings items and a new tutorial for the earth element, animations and spells and much bugfixing and some ui improvements. To understand 9 nations play the tutorial. You can find it in the campaign menu.;;You can find the new features on the website https://9nations.de
+newDesc=Hello;;this update brings the first part of the fire element, many new fight options and easier language support. To understand 9 nations play the tutorial. You can find it in the campaign menu.;;You can find the new features on the website https://9nations.de
 nextround=next round
 nextUnit=show next Unit
 night=Show night
@@ -446,6 +446,17 @@ requirementPlural=requirements
 reqUpgradeField=Needs on the field the building {0}.
 reqUpgradeFieldPlural=Needs on the field on of the buildings {0}.
 res=resource
+resCount0=none
+resCount10=some
+resCount25=several
+resCount60=multiple
+resCount100=more
+resCount500=much
+resCount1000=much more
+resCountMore=numerous
+resCountDebug={0} ({1})
+resCountRange={0}-{1}
+resCountChance={0}% chance for {1}
 research=research
 researchDesc=You never know what you will discover during research. Research in 9N also functions this way. You choose different elements or a combination of them and start researching. The more elements you combine the longer the research will take. The greater is the chance of researching something. If I only do research light you will discover the baracks. If you combine light and light you can also discover the bigger village hall or the baracks.
 reset=reset
@@ -671,3 +682,11 @@ present=give a present
 presentDesc=Give something as a present
 elementFreeUnit=Free unit on development
 christkind=christ child
+pigfarm=Fattening barn
+butchery=butchery
+pig=pig
+altar=altar
+fhall=fire hall
+chestOpen=chest open
+gameButton=game button
+fireWor=fire Worshipers
